feat: new copy, language selector, remove lock on search to country

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Toilet Locator: Changing Places</title>
+    <title>Changing Places International Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
